# ActuallySparse

./: .gitignore  LICENSE.md  README.md  SparseLayer.py  SparseModule.py  Training_loop.ipynb  generate_baselines.ipynb  integrate.ipynb  main.py  memory.ipynb  pretrained.py  pyproject.toml  requirements.txt  setup.py  sparsify.ipynb  transfer_learining_baselines.ipynb
SparseLayers/: LayerConverter.py  SparseModule.py
actuallysparse/: converter.py  layers.py
models/: Training_loop.ipynb  full_model_report.py  inference_memory.ipynb  memory.ipynb  pretrained.py  sparse_loop.ipynb  sparsify.ipynb  train_new_models.py  training_loop.ipynb
tests/: converter.py  test_converter.py  test_layers.py  test_model.py
